# -python_web_hw2_part2

./: Dockerfile  pyproject.toml
bot-konsole/: Dockerfile  main.py
